--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ mdurl==0.1.2
 numpy==1.26.2
 openai==1.3.5
 packaging==23.2
+pafy==0.5.5
 pandas==2.1.3
 Pillow==10.1.0
 protobuf==4.25.1
@@ -36,6 +37,8 @@ pydeck==0.8.1b0
 Pygments==2.17.2
 python-dateutil==2.8.2
 python-dotenv==1.0.0
+pytube @ git+https://github.com/pytube/pytube@a32fff39058a6f7e5e59ecd06a7467b71197ce35
+pytube3==9.6.4
 pytz==2023.3.post1
 referencing==0.31.0
 regex==2023.10.3
